--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
 
 								<!-- Feature -->
 									<section>
+										<a href="https://medium.com/@i.cemozcelik/data-science-project-rule-based-classification-633316645461" class="image featured"><img src="images/Rule_Based.png" alt="" /></a>
+										<header>
+											<h3>Data Science Project : Rule Based Classification</h3>		
+										</header>
+										<p><strong>	<a href="https://github.com/ccemozclk/Rule_based_classification">Codes:</a></strong>
+
+										</p>
+									</section>
+
+							</div>
+							
+							<div class="col-4 col-6-medium col-12-small">
+
+								<!-- Feature -->
+									<section>
 										<a href="https://medium.com/@i.cemozcelik/measurement-problems-episode-ii-rating-sorting-products-reviews-510d3dc72e3d" class="image featured"><img src="images/sorting.jpeg" alt="" /></a>
 										<header>
 											<h3>Measurement Problems Episode II: Rating & Sorting Products — Reviews</h3>
