--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="https://medium.com/@i.cemozcelik/data-science-project-rule-based-classification-633316645461" class="image featured"><img src="images/Rule_Based.png" alt="" /></a>
+										<a href="https://medium.com/@i.cemozcelik/data-science-project-rule-based-classification-633316645461" class="image featured"><img src="images/Rule_Based.jpg" alt="" /></a>
 										<header>
 											<h3>Data Science Project : Rule Based Classification</h3>		
 										</header>
