--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+		        img {
+		            width: 1280px;
+		            height: 960px;
+		            object-fit: cover;
+		        }
+		</style>
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
